--- a/iletisim.html
+++ b/iletisim.html
@@ -19,7 +19,7 @@
 
 
 <nav class="navbar">
-    <a href="anasayfa.html"> <i class="fas fa-home"></i> <span>ANA SAYFA</span> </a>
+    <a href="index.html"> <i class="fas fa-home"></i> <span>ANA SAYFA</span> </a>
     <a href="hakkimizda.html"> <i class="fas fa-user"></i> <span>HAKKINDA</span> </a>
     <a href="iletisim.html"> <i class="fas fa-address-book"></i> <span>İLETİŞİM</span> </a>
 
