iletisim.html olusturuldu.

--- a/iletisim.html
+++ b/iletisim.html
@@ -56,6 +56,14 @@
                     <p>KONYA, TÜRKİYE</p>
                 </div>
             </div>
+           
+            <div class="box">
+                <i class="fas fa-number"></i>
+                <div class="info">
+                    <h3>telefon numarası :</h3>
+                    <p>+1 (587) 333-9328</p>
+                </div>
+            </div>
 
         </div>
 
