iletisim.html olusturuldu.

--- a/iletisim.html
+++ b/iletisim.html
@@ -58,9 +58,9 @@
             </div>
            
             <div class="box">
-                <i class="fas fa-number"></i>
+                <i class="fas fa-watsapp"></i>
                 <div class="info">
-                    <h3>telefon numarası :</h3>
+                    <h3>Watsapp numarası :</h3>
                     <p>+1 (587) 333-9328</p>
                 </div>
             </div>
