--- a/iletisim.html
+++ b/iletisim.html
@@ -67,6 +67,33 @@
 
         </div>
 
+        <script type=”text/javascript”>
+
+(function () {
+
+var options = {
+
+WhatsApp: “+15873339328”, //
+
+call_to_action: “Merhaba, nasıl yardımcı olabilirim?”, // Görünecek metin
+
+position: “right”, // Position may be ‘right’ or ‘left’
+
+};
+
+var proto = document.location.protocol, host = “whatshelp.io”, url = proto + “//static.” + host;
+
+var s = document.createElement(‘script’); s.type = ‘text/javascript’; s.async = true; s.src = url + ‘/widget-send-button/js/init.js’;
+
+s.onload = function () { WhWidgetSendButton.init(host, proto, options); };
+
+var x = document.getElementsByTagName(‘script’)[0]; x.parentNode.insertBefore(s, x);
+
+})();
+
+</script>
+
+
         <div class="share">
             <a href="https://twitter.com/SaracogluSamed" class="fab fa-twitter"></a>
             <a href="https://instagram.com/asamedsaracoglu" class="fab fa-instagram"></a>
@@ -76,6 +103,7 @@
         </div>
 
     </div>
+
 
     <form action="">
 
