iletisğm.html olusturuldu.

--- a/iletisim.html
+++ b/iletisim.html
@@ -67,32 +67,7 @@
 
         </div>
 
-        <script type=”text/javascript”>
-
-(function () {
-
-var options = {
-
-WhatsApp: “+15873339328”, //
-
-call_to_action: “Merhaba, nasıl yardımcı olabilirim?”, // Görünecek metin
-
-position: “right”, // Position may be ‘right’ or ‘left’
-
-};
-
-var proto = document.location.protocol, host = “whatshelp.io”, url = proto + “//static.” + host;
-
-var s = document.createElement(‘script’); s.type = ‘text/javascript’; s.async = true; s.src = url + ‘/widget-send-button/js/init.js’;
-
-s.onload = function () { WhWidgetSendButton.init(host, proto, options); };
-
-var x = document.getElementsByTagName(‘script’)[0]; x.parentNode.insertBefore(s, x);
-
-})();
-
-</script>
-
+        
 
         <div class="share">
             <a href="https://twitter.com/SaracogluSamed" class="fab fa-twitter"></a>
@@ -128,6 +103,31 @@ var x = document.getElementsByTagName(‘script’)[0]; x.parentNode.insertBefor
 
 </section>
 
+<script type=”text/javascript”>
+
+(function () {
+
+var options = {
+
+WhatsApp: “+15873339328”, //
+
+call_to_action: “Merhaba, nasıl yardımcı olabilirim?”, // Görünecek metin
+
+position: “left”, // Position may be ‘right’ or ‘left’
+
+};
+
+var proto = document.location.protocol, host = “whatshelp.io”, url = proto + “//static.” + host;
+
+var s = document.createElement(‘script’); s.type = ‘text/javascript’; s.async = true; s.src = url + ‘/widget-send-button/js/init.js’;
+
+s.onload = function () { WhWidgetSendButton.init(host, proto, options); };
+
+var x = document.getElementsByTagName(‘script’)[0]; x.parentNode.insertBefore(s, x);
+
+})();
+
+</script>
 
 
 </body>
