--- a/iletisim.html
+++ b/iletisim.html
@@ -112,7 +112,7 @@
 </section>
 
 <!-- jQuery -->
-  <script type="text/javascript" src="js/jquery.min.js"></script>
+  <script type="text/javascript" src="jquery.min.js"></script>
 
 </body>
 </html>
