--- a/iletisim.html
+++ b/iletisim.html
@@ -82,6 +82,22 @@
     </div>
 
 
+    <a
+      href="javascript:void(
+        window.open(
+          'https://form.jotform.com/220544618150045',
+          'blank',
+          'scrollbars=yes,
+          toolbar=no,
+          width=700,
+          height=500'
+        )
+      )
+    ">
+      Form_encoderass
+    </a>
+
+
     <form action="">
 
         <div class="inputBox">
