--- a/iletisim.html
+++ b/iletisim.html
@@ -106,7 +106,7 @@
           <input type="text" id="input_25" name="q25_name" data-type="input-textbox" class="form-textbox" data-defaultvalue="" size="20" value="" placeholder=" " data-component="textbox" aria-labelledby="label_25" />
         </div>
       </li>
-      <li class="form-line" data-type="control_email" id="id_16">
+      <li class="form-line" data-type="control_textbox" id="id_16">
         <label class="form-label form-label-top form-label-auto" id="label_16" for="input_16"> E-mail Adresi </label>
         <div id="cid_16" class="form-input-wide">
           <input type="email" id="input_16" name="q16_emailAddress" class="form-textbox validate[Email]" data-defaultvalue="" size="32" value="" placeholder=" " data-component="email" aria-labelledby="label_16" />
